[package]
name = "aurora-box"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
html-escape = "0.2.13"
html_editor = "0.7.0"
indexmap = { version = "2.5.0", features = ["serde"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
ureq = "2.10.1"
